--- a/Web/BDAProject.Web/Views/Home/Index.cshtml
+++ b/Web/BDAProject.Web/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Perfectly Design</h3>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                            <p>We consider every design as tailor-made and unique.</p>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Carefully Planned</h3>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                            <p>We start with an extensive client intake, considering how our clients live, spend their time and their personal tastes.</p>
                         </div>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Smartly Execute</h3>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                            <p>This allows us to harmonize our characteristic signature with the personality of our client.</p>
                         </div>
                     </div>
                 </div>
