--- a/Web/BDAProject.Web/Views/Home/Index.cshtml
+++ b/Web/BDAProject.Web/Views/Home/Index.cshtml
@@ -44,6 +44,8 @@
         </div>
     </section>
 
+    <vc:latest-three-blog-posts></vc:latest-three-blog-posts>
+
     <section class="ftco-section ftc-no-pb">
         <div class="container">
             <div class="row no-gutters">
