--- a/Web/BDAProject.Web/Views/Contact/Contact.cshtml
+++ b/Web/BDAProject.Web/Views/Contact/Contact.cshtml
@@ -29,7 +29,7 @@
                         <input type="text" class="form-control" id="Name" name="Name" placeholder="Name">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="Email" name="Email" required placeholder="Email">
+                        <input type="email" class="form-control" id="Email" name="Email" required placeholder="Email">
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control" id="Subject" name="Subject" placeholder="Subject">
