--- a/Web/BDAProject.Web/Views/Forum/All.cshtml
+++ b/Web/BDAProject.Web/Views/Forum/All.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using BDAProject.Common
+@{
     ViewData["Title"] = "All";
 }
 
@@ -26,7 +27,7 @@
                             <th></th>
                         </tr>
                     </thead>
-                   <tbody>
+                    <tbody>
                         <tr>
                             <th>
                                 <img class="mr-3" src="~/images/profile_pic.jpg" alt="Generic placeholder image" style="max-width: 45px">
@@ -55,12 +56,12 @@
                                 }
                             </td>
                             <td>
-                                @if (this.User.Identity.Name == "maria@abv.bg")
+                                @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
                                 {
                                     <div class="button-holder">
                                         <a href="/Forum/DeletePost?postId=@item.Id" class="btn btn-danger">Delete</a>
                                     </div>
-                                 }
+                                }
                             </td>
                         </tr>
                     </tbody>
@@ -68,7 +69,7 @@
             </div>
             @if (item.Comments.Count != 0)
             {
-                
+
                 @foreach (var comment in item.Comments)
                 {
                     <li class="media">
@@ -87,7 +88,7 @@
                                     <a href="/Forum/EditComment?commentId=@comment.Id" class="btn btn-info text-uppercase">Edit</a>
                                 </div>
                             }
-                            @if (this.User.Identity.Name == "maria@abv.bg")
+                            @if (this.User.IsInRole(GlobalConstants.AdministratorRoleName))
                             {
                                 <div class="button-holder">
                                     <a href="/Forum/DeleteComment?commentId=@comment.Id" class="btn btn-danger">Delete</a>
